tests/e2e/ranges6.story
b = "aa"
c = b[0:2]
d = c / 2
